--- a/config.toml
+++ b/config.toml
@@ -9,7 +9,7 @@ defaultContentLanguage = "en"
 theme = "hugo-scroll"
 
 # The browser tab name
-title = "KilPen Technical Services, A Hawaii Company"
+title = "Athena Consulting, LLC"
 
 # In order to add version information in the page's footer set to true.
 # enableGitInfo = true
